# pegasus_sim_env

./: .gitignore  CMakeLists.txt  README.md  launch_pegasus.sh  package.xml  setup.cfg  setup.py
enviroment/: pegasus_enviroment.py
enviroment/backend/: omni_graphs.py  sensor.py
enviroment/config/: sensor_config.yaml
environment/: pegasus_environment.py
environment/backend/: omni_graphs.py
environment/config/: sensor_config.yaml
environment/data/: wind_turbine_2.usdc
launch/: pegasus.launch.py
launch_sim/: 1_px4_single_vehicle.py  launch_pegasus.sh
pegasus_simulation/: issac_graphs.py  omni_graphs.py  omni_sensors.py  pegasus_sim.py
pegasus_simulation/backend/: ros_publishers.py  sensor.py
pegasus_simulation/config/: sensor_config.yaml  stereo_camera.yaml
pegasus_simulation/data/: windturbine.usdc
src/: a_star_node.cpp  cost_map_node.cpp  ground_plane_lidar_filter.cpp  lidar_filter.cpp  nav2_navigation.cpp  planner_node.cpp  setpoints.cpp  vel_controller.cpp
src/examples/: path_logger.py  test_flight.py  test_flight_2.py  test_flight_3.py
src/launch/: isaac_sim_example.launch.py
